# openspacesim

./: .gitignore  AUTHORS  Doxyfile  Makefile.am  README.md  configure.ac
app/: BaseApplication.cpp  BaseApplication.hpp  LoadTest.cpp  Makefile.am  PropagatorInteractionTest.cpp  PropagatorInteractionTest.hpp  resources.cfg
app/materials/: Cube.mesh  Material.material  earth.material
libspacesim/: Actuator.cpp  Actuator.hpp  GameEntity.cpp  GameEntity.hpp  GameManager.cpp  GameManager.hpp  Makefile.am  MassiveObject.cpp  MassiveObject.hpp  Sensor.hpp  SimulationManager.cpp  SimulationManager.hpp  SimulationObject.hpp  SpaceObject.cpp  SpaceObject.hpp  Spacecraft.cpp  Spacecraft.hpp  TimeIntegrator.cpp  TimeIntegrator.hpp
share/: statefile.json
