AC_INIT(SampleApp,0.1)
AC_CONFIG_SRCDIR(configure.ac)
AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)
 
AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL
 
PKG_CHECK_MODULES(OGRE, [OGRE >= 1.2])
AC_SUBST(OGRE_CFLAGS)
AC_SUBST(OGRE_LIBS)
 
PKG_CHECK_MODULES(OIS, [OIS >= 1.0])
AC_SUBST(OIS_CFLAGS)
AC_SUBST(OIS_LIBS)

PKG_CHECK_MODULES(eigen3, [eigen3 >= 3.1])
AC_SUBST(EIGEN3_CFLAGS)

AC_CONFIG_FILES([Makefile\
	libspacesim/Makefile\
	app/Makefile
	])
AC_CONFIG_MACRO_DIR([m4])
AC_OUTPUT
